@@ -30,6 +30,9 @@ ubuntu-core-launcher (1.0.29) UNRELEASED; urgency=medium
   * Enable hardening options for snap-confine
   * Build-depend on udev, use udevlibdir instead of hardcoding /lib/udev
 
+  [ Jamie Strandboge ]
+  * chdir() to '/' before setting up private /tmp (LP: #1592402)
+
  -- Zygmunt Krynicki <zygmunt.krynicki@canonical.com>  Sun, 22 May 2016 16:14:24 +0300
 
 ubuntu-core-launcher (1.0.28) yakkety; urgency=medium
